fixed css path errors

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Test</title>
-        <link rel="stylesheet" href="/css/framework.css" type="text/css" />
-        <link rel="stylesheet" href="/css/components/toplevel/centermain.css" />
+        <link rel="stylesheet" href="/css/main/framework.css" type="text/css" />
+        <link rel="stylesheet" href="/css/main/components/toplevel/centermain.css" />
     </head>
     <body>
         <div id="foundation" class="mainframe">
