added text type

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Test</title>
         <link rel="stylesheet" href="/css/main/framework.css" type="text/css" />
-        <link rel="stylesheet" href="/css/main/components/toplevel/centermain.css" />
+        <link rel="stylesheet" href="/css/main/components/toplevel/centermain.css" type="text/css" />
     </head>
     <body>
         <div id="foundation" class="mainframe">
